Updated images, favicon, menu, staff list

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
    <!-- Metas -->
    <meta charset="utf-8">
    <title>Demogexia - a Minecraft server</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-   <meta content="Welcome to the grind!" name="description">
-   <meta content="width=device-width, initial-scale=1.0" name="viewport"><!-- Css -->
+   <meta content="The semi-vanilla Minecraft experience." name="description">
+   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+   <!-- Favicons-->
+      <!-- generics -->
+      <link rel="icon" href="img/favicon/favicon-32.png" sizes="32x32">
+      <link rel="icon" href="img/favicon/favicon-128.png" sizes="128x128">
+      <link rel="icon" href="img/favicon/favicon-192.png" sizes="192x192">
+
+      <!-- Android -->
+      <link rel="shortcut icon" href="img/favicon/favicon-196.png" sizes="196x196">
+
+      <!-- iOS -->
+      <link rel="apple-touch-icon" href="img/favicon/favicon-152.png" sizes="152x152">
+      <link rel="apple-touch-icon" href="img/favicon/favicon-167.png" sizes="167x167">
+      <link rel="apple-touch-icon" href="img/favicon/favicon-180.png" sizes="180x180">
+   <!-- Css -->
    <link href="css/bootstrap.css" media="all" rel="stylesheet" type="text/css">
    <link href="css/base.css" media="all" rel="stylesheet" type="text/css">
    <link href="css/main.css" media="all" rel="stylesheet" type="text/css">
@@ -18,13 +32,6 @@
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,300,400,400i,600,700,800" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
-   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-2635187009033577",
-          enable_page_level_ads: true
-     });
-</script>
 </head>
 <body>
    <!-- Preloader -->
@@ -68,15 +75,16 @@
          <div class="main-slider slider flexslider">
             <ul class="slides">
                <li>
-                  <div class="background-img overlay zoom"><img alt="" src="https://static.planetminecraft.com/files/resource_media/screenshot/1752/3a-1514380918.png"></div><!--Container-->
+                  <div class="background-img overlay zoom"><img alt="" src="img/hero.jpg"></div><!--Container-->
                   <div class="container hero-content">
                      <!--Row-->
                      <div class="row">
                         <div class="col-sm-12 text-center">
                            <!--Inner hero-->
                            <div class="inner-hero logo">
-                              <h1 class="large text-white uppercase mb-0">Demogexia Survival</h1>
-                              <h5 class="mb-0 text-white uppercase">The semi-vanilla survival Minecraft server</h5>
+                              <h1 class="large text-white uppercase mb-0">Demogexia Minecraft</h1>
+                              <h5 class="mb-0 text-white uppercase">The semi-vanilla survival Minecraft experience</h5>
+                              <h5 class="mb-0 text-white uppercase">Just like normal skyblock with enhanced features</h5>
                            </div>
                         </div><!--End row-->
                      </div><!--End container-->
@@ -105,7 +113,13 @@
                         <a class="scroll list-inline-item" href="#status">Status</a>
                      </li>-->
                      <li>
-                        <a class="scroll list-inline-item" href="https://demogexia.site/store"><i class="fab fa-discord"></i> Discord</a>
+                        <a class="scroll list-inline-item" href="https://demogexia.site/discord"><i class="fab fa-discord"></i> Discord</a>
+                     </li>
+                     <li>
+                        <a class="scroll list-inline-item" href="https://discord.gg/N3cUphy"><i class="fas fa-check"></i> Vote Sites</a>
+                     </li>
+                     <li>
+                        <a class="scroll list-inline-item" href="https://demogexia.site/store"><i class="fas fa-shopping-cart"></i> Store</a>
                      </li>
                   </ul>
                </nav>
@@ -159,7 +173,7 @@
       </section><!--End status section-->
       <!--About section-->
       <section class="about overlay main" id="store">
-         <div class="background-img"><img alt="" src="https://static.planetminecraft.com/files/resource_media/screenshot/1752/17a-1514380986.png"></div><!--Container-->
+         <div class="background-img"><img alt="" src="img/store.jpg"></div><!--Container-->
          <div class="container">
             <!--Row-->
             <div class="row vertical-align">
@@ -222,11 +236,6 @@
                      <h5 class="mb-0 opc-70 uppercase">TroyZS</h5><a class="link" href="#staff">Skyblock Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TroyZS/100.png"></a>
                   </div>
                </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/40baa9819df144f7938b62bb2ee3360a/100.png"></a>
-                  </div>
-               </div>
 
                <!--Moderator-->
                <div class="col-12 col-md-6 col-lg-3">
@@ -236,7 +245,7 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 uppercase opc-70">BOTRaiquia</h5><a class="link" href="#staff">Community Manager</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/e3c062f6b72b414e875fa74559e1ed96/100.png"></a>
+                     <h5 class="mb-0 uppercase opc-70">BOTRaiquia</h5><a class="link" href="#staff">Community Manager / Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/e3c062f6b72b414e875fa74559e1ed96/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
@@ -246,7 +255,12 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Moderator / Asst. Admin</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/68cc2b2807284256b9e1f836ed1093ad/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/68cc2b2807284256b9e1f836ed1093ad/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">ItsDeva</h5><a class="link" href="#staff">Skyblock Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/ItsDeva/100.png"></a>
                   </div>
                </div>
 
@@ -255,14 +269,36 @@
                   <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">kaneki</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Zenitsu/100.png"></a>
                   </div>
-               </div>             
+               </div>  
+               
+               <!--Contributor-->
+                  <div class="col-12 col-md-6 col-lg-3">
+                     <div class="block-album block-content">
+                        <h5 class="mb-0 opc-70 uppercase">Rayzr</h5><a class="link" href="#staff">Contributor</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/3cf6f3636635466eb1ce2c74464031a6/100.png"></a>
+                     </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">Dis</h5><a class="link" href="#staff">Skyblock Contributor</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Dis/100.png"></a>
+                  </div>
+            </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Past Contributor</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/40baa9819df144f7938b62bb2ee3360a/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">SrDuckington</h5><a class="link" href="#staff">A Duck</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/d84df4e767b248559022f1ee1ae0f002/100.png"></a>
+                  </div>
+               </div>
             </div><!--End row-->
          </div><!--End container-->
       </section><!--End discography section-->
 
       <!--Divider section-->
       <section class="divider overlay" id="forums">
-         <div class="background-img"><img alt="" src="https://static.planetminecraft.com/files/resource_media/screenshot/1752/18a-1514380991.png"></div><!--Container-->
+         <div class="background-img"><img alt="" src="img/community.jpg"></div><!--Container-->
          <div class="container">
             <!--Row-->
             <div class="row justify-content-center">
