--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                            <!--Inner hero-->
                            <div class="inner-hero logo">
                               <h1 class="large text-white uppercase mb-0">Demogexia Minecraft</h1>
-                              <h5 class="mb-0 text-white uppercase">The semi-vanilla survival Minecraft experience</h5>
-                              <h5 class="mb-0 text-white uppercase">Just like normal skyblock with enhanced features</h5>
+                              <h5 class="mb-0 text-white uppercase">The semi-vanilla Survival and Skyblock Minecraft experience.</h5>
                            </div>
                         </div><!--End row-->
                      </div><!--End container-->
@@ -233,34 +232,24 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">TroyZS</h5><a class="link" href="#staff">Skyblock Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TroyZS/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">TroyZS</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TroyZS/100.png"></a>
                   </div>
                </div>
 
                <!--Moderator-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">YoungSlicer</h5><a class="link" href="#staff">Senior Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/YoungSlicer/100.png"></a>
+                     <h5 class="mb-0 uppercase opc-70">Raiquiia</h5><a class="link" href="#staff">Community Manager / Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/e3c062f6b72b414e875fa74559e1ed96/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 uppercase opc-70">BOTRaiquia</h5><a class="link" href="#staff">Community Manager / Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/e3c062f6b72b414e875fa74559e1ed96/100.png"></a>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">TEAMGAM3R</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/524e1f681fa540699797865ad363847d/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">YoungSlicer</h5><a class="link" href="#staff"> Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/YoungSlicer/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/68cc2b2807284256b9e1f836ed1093ad/100.png"></a>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">ItsDeva</h5><a class="link" href="#staff">Skyblock Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/ItsDeva/100.png"></a>
                   </div>
                </div>
 
@@ -279,12 +268,12 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">Dis</h5><a class="link" href="#staff">Skyblock Contributor</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Dis/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">Disclosd</h5><a class="link" href="#staff">Contributor</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Dis/100.png"></a>
                   </div>
             </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Past Contributor</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/40baa9819df144f7938b62bb2ee3360a/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Contributor</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/40baa9819df144f7938b62bb2ee3360a/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
